<resources>
    <string name="app_name">Gourmet Restaurant Search</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="message_no_reviews">Message: no reviews</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="bottom_nav">Bottom Navigation</string>
    <string name="rating_button">Rating</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="filter">filter</string>
    <string name="data_chart" />
    <string name="searchBox">Search...</string>
    <string name="friends_name">Friend\'s Name</string>
    <string name="search_friends">Search Friends</string>
    <string name="view_profile">View Profile</string>
    <string name="attach_file">Attach File</string>
    <string name="type_message">Type a message</string>
    <string name="send_button_label">Send</string>
    <string name="experience_hint">How was your experience?</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="submit_button_label">Submit</string>
    <string name="add_review_label">Add Review</string>
    <string name="chats_title">Chats</string>
    <string name="content_description_start_new_chat">Start New Chat</string>
    <string name="text_start_chat">Start Chat</string>
    <string name="hint_enter_email">Enter email to start chat</string>
    <string name="label_restaurant">Restaurant</string>
    <string name="label_type">Type</string>
    <string name="label_city">City</string>
    <string name="label_instruction">Instruction:</string>
    <string name="description_pie_chart">This pie chart shows the distribution of restaurant categories, with the size of each section indicating the percentage of restaurants in that category.</string>
    <string name="content_description_user_profile_picture">User Profile Picture</string>
    <string name="text_user_name">User Name</string>
    <string name="text_last_message_snippet">Last message snippet...</string>
    <string name="text_time">12:34 PM</string>
    <string name="text_user_email">User Email</string>
    <string name="text_coordinates">latitude: ?, longitude: ?</string>
    <string name="sample_receiver_message">Sample receiver message</string>
    <string name="sample_sender_message">Sample sender message</string>
    <string name="category_label">Category          </string>
    <string name="sort_label">Sort                   </string>
    <string name="min_cost_label">MinCost:    </string>
    <string name="cost_zero">Cost: 0</string>
    <string name="max_cost_label">MaxCost:    </string>
    <string name="min_rating_label">MinRating: </string>
    <string name="rating_zero">Rating: 0</string>
    <string name="max_rating_label">MaxRating: </string>
    <string name="around_me_label">Around Me</string>
    <string name="bar_chart_label">Bar Chart</string>
    <string name="line_chart_label">Line Chart</string>
    <string name="pie_chart_label">Pie Chart</string>
    <string name="dine_finder_label">Dine Finder</string>
    <string name="discover_culinary_label">Discover Your Next Culinary Adventure</string>
    <string name="instruction_label">Instruction:</string>
    <string name="bar_chart_description">This bar chart shows the relationship between cities and number of restaurants: \nx-axis: 9 cities, \ny-axis: number of restaurants in each city.</string>
    <string name="radar_chart">Radar Chart</string>


    <string-array name="cuisine_types">
        <item>Empty</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>Indian</item>
        <item>Mexican</item>
        <item>Thai</item>
        <item>Mediterranean</item>
        <item>French</item>
        <item>Japanese</item>
        <item>Korean</item>
    </string-array>
    <string-array name="sorting_methods">
        <item>Empty</item>
        <item>Smart Sorting</item>
        <item>Most Reviews First</item>
        <item>Lowest Price First</item>
        <item>Highest Price First</item>
        <item>Highest Rating First</item>
    </string-array>
</resources>

