<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <!-- Top Bar -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/friendNameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/friends_name"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/searchIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search_friends" />

        <ImageView
            android:id="@+id/profileIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:contentDescription="@string/view_profile" />
    </LinearLayout>

    <!-- Chat Messages -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/messageInputLayout"
        android:layout_below="@+id/topBar"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/chat_message_item"/>


    <!-- Message Input Section -->
    <LinearLayout
        android:id="@+id/messageInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/attachmentIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:contentDescription="@string/attach_file" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/type_message"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/sendMessageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_background"
            android:text="@string/send_button_label" />
    </LinearLayout>

</RelativeLayout>
