<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chat_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="8dp">

    <!-- User's Profile Picture -->

    <!-- Chat Details (Name, Last Message, Timestamp) -->
    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/content_description_user_profile_picture"
        android:background="@drawable/account_head"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <!-- User's Name -->

        <!-- Snippet of the Last Message -->

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_user_name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/lastMessageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/text_last_message_snippet"
            android:textSize="14sp" />

    </LinearLayout>

    <!-- Timestamp of the Last Message -->
    <TextView
        android:id="@+id/timestampTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_time"
        android:textColor="@android:color/darker_gray"
        android:textSize="12sp" />

</LinearLayout>
