<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/login_button_background">

    <!-- Cost SeekBar and Label -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_fastfood_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_label"
            android:layout_marginEnd="90dp"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="220dp"
            android:layout_height="55dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_sort_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_label"
            android:layout_marginEnd="124dp"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_sort"
            android:layout_width="220dp"
            android:layout_height="55dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_monetization_on_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_cost_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_min_cost_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_zero"
            android:layout_marginEnd="16dp"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBar_min_cost"
            android:layout_width="220dp"
            android:layout_height="55dp"
            android:max="150" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_monetization_on_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_cost_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_max_cost_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost_zero"
            android:layout_marginEnd="12dp"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBar_max_cost"
            android:layout_width="220dp"
            android:layout_height="55dp"
            android:max="150" />

    </LinearLayout>

    <!-- Rating SeekBar and Label -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_star_rate_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min_rating_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_min_rating_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_zero"
            android:layout_marginEnd="4dp"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBar_min_rating"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:max="50" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/baseline_star_rate_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_rating_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_max_rating_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating_zero"
            android:textSize="16sp" />

        <SeekBar
            android:id="@+id/seekBar_max_rating"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:max="50" />
    </LinearLayout>

    <!-- City Spinner and Label -->

    <!-- Type Spinner and Label -->

    <CheckBox
        android:id="@+id/checkbox_restaurantcity"
        android:layout_width="380dp"
        android:layout_height="52dp"
        android:text="@string/around_me_label" />

</LinearLayout>