<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:id="@+id/comment_restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/label_restaurant"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_alignParentLeft="true"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/comment_restaurant_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/comment_restaurant_name"
        android:text="@string/label_type"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/comment_restaurant_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/comment_restaurant_type"
        android:text="@string/label_city"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/comments_recycler_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/comment_restaurant_city"
        android:layout_marginTop="0dp"
        tools:listitem="@layout/item_rating" />
</RelativeLayout>
